--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Weather Dashboard</title>
+  <title>Weather Forecaster</title>
 
   <!-- Bootswatch, Font Awesome, and Google Fonts links -->
   <link 
@@ -22,7 +22,7 @@
 <body>
 
   <div class="container">
-    <h1>Weather Dashboard</h1>
+    <h1>Weather Forecaster</h1>
 
     <!-- City search history div  -->
     <div id="buttons-view"></div>
